objects/SCV_Duplicate_Management__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This includes the settings for Single Customer View</description>
    <fields>
        <fullName>Duplicate_Records_Limit__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Duplicate Records Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enable_Custom_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to include the custom identification matching to view the duplicates item.</description>
        <label>Enable Custom Matching (Identification)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_First_Pass_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SCV Whether to activate first pass account aggregation matching to limit records</description>
        <label>Enable First Pass Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <label>Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SCV Duplicate Management</label>
</CustomObject>